Listando auxiliares y creando auxiliares

--- a/Parking.App/Parking.App.Frontend/Pages/GestorAuxiliar/index.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorAuxiliar/index.cshtml
@@ -4,7 +4,7 @@
 }
 <h1>Gestionar Auxiliares</h1>
 <p>En está pagina podrás gestionar los Auxiliares</p>
-<a class="btn btn-primary table-btn" asp-page="./Crearauxiliar">Agrega Auxiliar</a>
+<a class="btn btn-primary table-btn" asp-page="./CrearAuxiliar">Agrega Auxiliar</a>
 <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -26,7 +26,7 @@
         <td>@auxiliar.Direccion</td>
         <td>@auxiliar.Email</td>
         <td>@auxiliar.Contrasena</td>
-        <td>@auxiliar.Fecha_nacimento</td>
+        <td>@auxiliar.Fecha_nacimiento</td>
         <td>@auxiliar.Turno</td>
         <td>
           
