Actualizaciones al crud de auxiliar y gerente

--- a/Parking.App/Parking.App.Frontend/Pages/GestorAuxiliar/EditarAuxiliar.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorAuxiliar/EditarAuxiliar.cshtml
@@ -7,37 +7,37 @@
 <form method="post" class="mt-3">
     <div class="form-group row">
         <label asp-for="auxiliar.Nombre" class="col-sm-2">Nombre</label>
-        <input asp-for="auxiliar.Nombre" class="form-control" value="" required >
+        <input asp-for="auxiliar.Nombre" class="form-control"  required >
         
     </div>
     <div class="form-group row">
         <label asp-for="auxiliar.Identificacion" class="col-sm-2">Identificacion</label>
-        <input asp-for="auxiliar.Identificacion" class="form-control" value="" required>
+        <input asp-for="auxiliar.Identificacion" class="form-control"  required>
         
     </div>   
     
         
     <div class="form-group row">  
         <label asp-for="auxiliar.Telefono" class="col-sm-2">Telefono</label>
-        <input asp-for="auxiliar.Telefono" class="form-control" value="" required>
+        <input asp-for="auxiliar.Telefono" class="form-control"  required>
            
     </div>
 
     <div class="form-group row">
         <label asp-for="auxiliar.Direccion" class="col-sm-2">Direccion</label>
-        <input asp-for="auxiliar.Direccion" class="form-control" value="">
+        <input asp-for="auxiliar.Direccion" class="form-control" >
         
     </div> 
 
     <div class="form-group row">
         <label asp-for="auxiliar.Email" class="col-sm-2">Email</label>
-        <input asp-for="auxiliar.Email" class="form-control" value="" required>
+        <input asp-for="auxiliar.Email" class="form-control"  required>
         
     </div> 
 
     <div class="form-group row">
         <label asp-for="auxiliar.Contrasena" class="col-sm-2">Contraseña</label>
-        <input asp-for="auxiliar.Contrasena" class="form-control" value="" required>
+        <input asp-for="auxiliar.Contrasena" class="form-control"  required>
         
              
     </div>
@@ -45,13 +45,13 @@
     
     <div class="form-group row">
         <label asp-for="auxiliar.Fecha_nacimiento" class="col-sm-2">Fecha de Nacimiento</label>
-        <input asp-for="auxiliar.Fecha_nacimiento" class="form-control" value="" required>
+        <input asp-for="auxiliar.Fecha_nacimiento" class="form-control"  required>
         
     </div>
 
     <div class="form-group row">
         <label asp-for="auxiliar.Turno" class="col-sm-2">Turno</label>
-        <input asp-for="auxiliar.Turno" class="form-control" value="" required>
+        <input asp-for="auxiliar.Turno" class="form-control"  required>
         
     </div>
 
