--- a/Parking.App/Parking.App.Frontend/Pages/GestorGerente/EditarGerente.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorGerente/EditarGerente.cshtml
@@ -43,6 +43,6 @@
 
     <div class="form-group row">
         <button type="submit" class="btn btn-primary">Editar</button>
-        <a asp-page="./ListarGrente" class="btn btn-primary">Cancelar</a>
+        <a asp-page="./ListarGerente" class="btn btn-primary">Cancelar</a>
     </div>
 </form>
