--- a/Parking.App/Parking.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/GestorGerente/ListarGerente">Gestionar Gerente</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/GestorVehiculo/ListarVehiculo">Gestionar Vehiculo</a>
+                        </li>
                     </ul>
                 </div>
             </div>
