--- a/Parking.App/Parking.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/GestorVehiculo/ListarVehiculo">Gestionar Vehiculo</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/GestorCliente/ListarCliente">Gestionar Cliente</a>
+                        </li>                       
                     </ul>
                 </div>
             </div>
