--- a/Parking.App/Parking.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,12 @@
                         </li>
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/GestorCliente/ListarCliente">Gestionar Cliente</a>
-                        </li>                       
+                        </li> 
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/GestorAdministrador/ListarAdministrador">Gestionar Administrador</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
