--- a/Parking.App/Parking.App.Frontend/Pages/GestorCliente/DetalleCliente.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorCliente/DetalleCliente.cshtml
@@ -2,3 +2,15 @@
 @model Parking.App.Frontend.Pages.DetalleClienteModel
 @{
 }
+<h1>Detalle del Administrador @Model.cliente.Nombre</h1>
+<ul>
+       
+        <li>@Model.cliente.Identificacion</li>
+        <li>@Model.cliente.Telefono</li>
+        <li>@Model.cliente.Direccion</li>
+        <li>@Model.cliente.Email</li>
+        <li>@Model.cliente.Contrasena</li>
+        <li>@Model.cliente.Fecha_nacimiento</li>
+        <li>@Model.cliente.fecha_Registro</li>
+    
+</ul>
