--- a/Parking.App/Parking.App.Frontend/Pages/GestorGerente/ListarGerente.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorGerente/ListarGerente.cshtml
@@ -30,7 +30,8 @@
         <td>@gerente.Contrasena</td>
         <td><a class="btn btn-primary table-btn" asp-page="./DetalleGerente" asp-route-Identificacion="@gerente.Identificacion">Ver más</a>
           <br>
-          <a class="btn btn-primary table-btn" asp-page="./EditarGerente" asp-route-Identificacion="@gerente.Identificacion">Editar</a></td>
+          <a class="btn btn-primary table-btn" asp-page="./EditarGerente" asp-route-Identificacion="@gerente.Identificacion">Editar</a>
+          <a class="btn btn-primary table-btn" asp-page="./EliminarGerente" asp-route-Identificacion="@gerente.Identificacion">Eliminar</a></td>
         <td>
           
     </tr>
