--- a/Parking.App/Parking.App.Frontend/Pages/GestorCliente/ListarCliente.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorCliente/ListarCliente.cshtml
@@ -32,7 +32,8 @@
         <td>@cliente.Fecha_nacimiento</td>        
         <td><a class="btn btn-primary table-btn" asp-page="./DetalleCliente" asp-route-Identificacion="@cliente.Identificacion">Ver más</a>
           <br>
-          <a class="btn btn-primary table-btn" asp-page="./EditarCliente" asp-route-Identificacion="@cliente.Identificacion">Editar</a></td>
+          <a class="btn btn-primary table-btn" asp-page="./EditarCliente" asp-route-Identificacion="@cliente.Identificacion">Editar</a>
+          <a class="btn btn-primary table-btn" asp-page="./EliminarCliente" asp-route-Identificacion="@cliente.Identificacion">Eliminar</a></td>
         <td>            
         </tr>
 
