relacion entre cliente y vehiculo gestor vehiculo funcionando completo

--- a/Parking.App/Parking.App.Frontend/Pages/GestorVehiculo/EditarVehiculo.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorVehiculo/EditarVehiculo.cshtml
@@ -43,6 +43,11 @@
     </div>
 
     <div class="form-group row">
+        <label asp-for="IdCliente" class="col-sm-2">Cliente</label>
+        <select asp-for="IdCliente" asp-items="Model.clientes"></select>
+    </div>
+
+    <div class="form-group row">
         <button type="submit" class="btn btn-primary">Guardar</button>
         <a asp-page="./ListarVehiculo" class="btn btn-primary">Cancelar</a>
     </div>
