--- a/Parking.App/Parking.App.Frontend/Pages/GestorVehiculo/ListarVehiculo.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorVehiculo/ListarVehiculo.cshtml
@@ -29,6 +29,8 @@
         <td>@vehiculo.Color</td>
         <td>@vehiculo.Tipo</td>
         <td>@vehiculo.Placa</td>
+        <td>@vehiculo.Cliente.Nombre</td>
+        <td>@vehiculo.Cliente.Identificacion</td>
        
         
         <td>
