--- a/Parking.App/Parking.App.Frontend/Pages/GestorCliente/CrearCliente.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorCliente/CrearCliente.cshtml
@@ -1,61 +1,62 @@
 ﻿@page
-@model Parking.App.Frontend.Pages.CrearClienteModel
+@model Parking.App.Frontend.CrearClienteModel
 @{
 }
-<h1>Crear Cliente</h1>
+h1>Crear Cliente</h1>
 <form method="post" class="mt-3">
     <div class="form-group row">
         <label asp-for="cliente.Nombre" class="col-sm-2">Nombre</label>
-        <input asp-for="cliente.Nombre" class="form-control" value="" required>
-
+        <input asp-for="cliente.Nombre" class="form-control" value="" required >
+        
     </div>
     <div class="form-group row">
         <label asp-for="cliente.Identificacion" class="col-sm-2">Identificacion</label>
         <input asp-for="cliente.Identificacion" class="form-control" value="" required>
-
-    </div>
-
-
-    <div class="form-group row">
+        
+    </div>   
+    
+        
+    <div class="form-group row">  
         <label asp-for="cliente.Telefono" class="col-sm-2">Telefono</label>
         <input asp-for="cliente.Telefono" class="form-control" value="" required>
-
+           
     </div>
 
     <div class="form-group row">
         <label asp-for="cliente.Direccion" class="col-sm-2">Direccion</label>
         <input asp-for="cliente.Direccion" class="form-control" value="">
-
-    </div>
+        
+    </div> 
 
     <div class="form-group row">
         <label asp-for="cliente.Email" class="col-sm-2">Email</label>
         <input asp-for="cliente.Email" class="form-control" value="" required>
-
-    </div>
+        
+    </div> 
 
     <div class="form-group row">
         <label asp-for="cliente.Contrasena" class="col-sm-2">Contraseña</label>
         <input asp-for="cliente.Contrasena" class="form-control" value="" required>
-
-
-    </div>
-    <div class="form-group row">
-        <label asp-for="cliente.fecha_Registro" class="col-sm-2">Fecha de registro</label>
-        <input asp-for="cliente.fecha_Registro" class="form-control" value="" required>
-
-
+        
+             
     </div>
     
     <div class="form-group row">
-        <label asp-for="cliente.Fecha_nacimiento" class="col-sm-2">Fecha de nacimiento</label>
+        <label asp-for="cliente.Fecha_nacimiento" class="col-sm-2">Fecha de Nacimiento</label>
         <input asp-for="cliente.Fecha_nacimiento" class="form-control" value="" required>
-
-
+        
     </div>
 
+     <div class="form-group row">
+        <label asp-for="cliente.fecha_Registro" class="col-sm-2">Fecha de Registro</label>
+        <input asp-for="cliente.fecha_Registro" class="form-control" value="" required>
+        
+    </div>
+  
     <div class="form-group row">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a asp-page="./ListarCliente" class="btn btn-primary">Cancelar</a>
+        <a asp-page="./ListarGerente" class="btn btn-primary">Cancelar</a>
     </div>
 </form>
+
+
