--- a/Parking.App/Parking.App.Frontend/Pages/GestorCliente/EditarCliente.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorCliente/EditarCliente.cshtml
@@ -1,6 +1,5 @@
 ﻿@page
-@model Parking.App.Frontend.Pages.EditarClienteModel
-
+@model Parking.App.Frontend.EditarClienteModel
 @{
 }
 <h1>Editar Cliente</h1>
@@ -46,15 +45,18 @@
         
              
     </div>
-
     
     <div class="form-group row">
         <label asp-for="cliente.Fecha_nacimiento" class="col-sm-2">Fecha de Nacimiento</label>
         <input asp-for="cliente.Fecha_nacimiento" class="form-control"  required>
         
     </div>
-
-   
+    
+    <div class="form-group row">
+        <label asp-for="cliente.fecha_Registro" class="col-sm-2">Fecha de Nacimiento</label>
+        <input asp-for="cliente.fecha_Registro" class="form-control"  required>
+        
+    </div>
 
     <div class="form-group row">
         <button type="submit" class="btn btn-primary">Guardar</button>
