--- a/Parking.App/Parking.App.Frontend/Pages/GestorAdministrador/EditarAdministrador.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorAdministrador/EditarAdministrador.cshtml
@@ -14,12 +14,14 @@
     <div class="form-row">
     <div class="form-group col-md-6">
         <label asp-for="administrador.Nombre" class="col-sm-2">Nombre</label>
-        <input asp-for="administrador.Nombre" class="form-control"  required >        
+        <input asp-for="administrador.Nombre" class="form-control" > 
+        <span class ="text-danger" asp-validation-for="administrador.Nombre"></span>       
     </div>
 
     <div class="form-group col-md-6">
         <label asp-for="administrador.Identificacion" class="col-sm-2">Identificacion</label>
-        <input asp-for="administrador.Identificacion" class="form-control"  required>        
+        <input asp-for="administrador.Identificacion" class="form-control"  >  
+        <span class ="text-danger" asp-validation-for="administrador.Identificacion"></span>      
     </div>   
     
         
