--- a/Parking.App/Parking.App.Frontend/Pages/GestorCliente/EditarCliente.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorCliente/EditarCliente.cshtml
@@ -2,64 +2,69 @@
 @model Parking.App.Frontend.EditarClienteModel
 @{
 }
-<h1>Editar Cliente</h1>
+<div class = "center">
+<h3>Editar Cliente</h3>
 <form method="post" class="mt-3">
+
     <div class="form-group row">
        
         <input asp-for="cliente.Id" class="form-control"  type="hidden" required >
         
     </div>
-    <div class="form-group row">
+    <div class="form-row">
+    <div class="form-group col-md-6">
         <label asp-for="cliente.Nombre" class="col-sm-2">Nombre</label>
         <input asp-for="cliente.Nombre" class="form-control"  required >
         
     </div>
-    <div class="form-group row">
+    <div class="form-group col-md-6">
         <label asp-for="cliente.Identificacion" class="col-sm-2">Identificacion</label>
         <input asp-for="cliente.Identificacion" class="form-control"  required>
         
     </div>   
     
         
-    <div class="form-group row">  
+    <div class="form-group col-md-6">  
         <label asp-for="cliente.Telefono" class="col-sm-2">Telefono</label>
         <input asp-for="cliente.Telefono" class="form-control"  required>
            
     </div>
 
-    <div class="form-group row">
+    <div class="form-group col-md-6">
         <label asp-for="cliente.Direccion" class="col-sm-2">Direccion</label>
         <input asp-for="cliente.Direccion" class="form-control" >
         
     </div> 
 
-    <div class="form-group row">
+    <div class="form-group col-md-6">
         <label asp-for="cliente.Email" class="col-sm-2">Email</label>
         <input asp-for="cliente.Email" class="form-control"  required>
         
     </div> 
 
-    <div class="form-group row">
+    <div class="form-group col-md-6">
         <label asp-for="cliente.Contrasena" class="col-sm-2">Contraseña</label>
         <input asp-for="cliente.Contrasena" class="form-control"  required>
         
              
     </div>
     
-    <div class="form-group row">
+    <div class="form-group col-md-6">
         <label asp-for="cliente.Fecha_nacimiento" class="col-sm-2">Fecha de Nacimiento</label>
         <input asp-for="cliente.Fecha_nacimiento" class="form-control"  required>
         
     </div>
     
-    <div class="form-group row">
-        <label asp-for="cliente.fecha_Registro" class="col-sm-2">Fecha de Nacimiento</label>
+    <div class="form-group col-md-6">
+        <label asp-for="cliente.fecha_Registro" class="col-sm-2">Fecha de Registro</label>
         <input asp-for="cliente.fecha_Registro" class="form-control"  required>
         
     </div>
+    </div>
 
-    <div class="form-group row">
+    <div>
         <button type="submit" class="btn btn-primary">Guardar</button>
         <a asp-page="./ListarCliente" class="btn btn-primary">Cancelar</a>
     </div>
 </form>
+</div>
