parqueadero completo con vehiculo 100% funcional y modificacion en dominio y persistencia

--- a/Parking.App/Parking.App.Frontend/Pages/GestorParqueadero/DetalleParqueadero.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorParqueadero/DetalleParqueadero.cshtml
@@ -4,7 +4,9 @@
 }
 h1>Detalle del Parquedero @Model.parqueadero.Id</h1>
 <ul>     
-        <li>@Model.parqueadero.Piso</li>
+        <li>@Model.parqueadero.Vehiculo.Placa</li>
         <li>@Model.parqueadero.Espacio</li>
-        <li>@Model.parqueadero.Estado</li>    
+        <li>@Model.parqueadero.Hora_Entrada</li>
+        <li>@Model.parqueadero.Hora_Salida</li>
+
 </ul>
