--- a/Parking.App/Parking.App.Frontend/Pages/GestorParqueadero/CrearParqueadero.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorParqueadero/CrearParqueadero.cshtml
@@ -5,19 +5,27 @@
 }
 <h1>Crear Parqueadero</h1>
 <form method="post" class="mt-3">
-    <div class="form-group row">
-        <label asp-for="parqueadero.Piso" class="col-sm-2">Piso</label>
-        <input asp-for="parqueadero.Piso" class="form-control" value="" required>
+     <div class="form-group row">
+        <label asp-for="IdVehiculo" class="col-sm-2">Vehiculo</label>
+        <select asp-for="IdVehiculo" asp-items="Model.vehiculos"></select>
     </div>
 
     <div class="form-group row">
-        <label asp-for="parqueadero.Espacio" class="col-sm-2">Espacio</label>
-        <input asp-for="parqueadero.Espacio" class="form-control" value="">
+        <label asp-for="parqueadero.Espacio" class="col-sm-2">Espacio a Ocupar</label>
+        <div class="col-sm-10">
+            <select asp-for="parqueadero.Espacio" asp-items="Html.GetEnumSelectList<Espacio>()"></select>   
+        </div>
+        <span class="text-danger" asp-validation-for="parqueadero.Espacio"></span>
     </div>
 
     <div class="form-group row">
-        <label asp-for="parqueadero.Estado" class="col-sm-2">Estado</label>
-        <input asp-for="parqueadero.Estado" class="form-control" value="">
+        <label asp-for="parqueadero.Hora_Entrada" class="col-sm-2">Hora de Entrada</label>
+        <input asp-for="parqueadero.Hora_Entrada" class="form-control" value="">
+    </div>
+
+    <div class="form-group row">
+        <label asp-for="parqueadero.Hora_Salida" class="col-sm-2">Hora de Salida</label>
+        <input asp-for="parqueadero.Hora_Salida" class="form-control" value="">
     </div>
 
     </div>
