--- a/Parking.App/Parking.App.Frontend/Pages/GestorParqueadero/EditarParqueadero.cshtml
+++ b/Parking.App/Parking.App.Frontend/Pages/GestorParqueadero/EditarParqueadero.cshtml
@@ -1,28 +1,37 @@
 ﻿@page
 @model Parking.App.Frontend.EditarParqueaderoModel
+@using Parking.App.Dominio
 @{
 }
 <h1>Editar Parqueadero</h1>
 <form method="post" class="mt-3">
-    <div class="form-group row"> 
+<div class="form-group row">
+       
+        <input asp-for="parqueadero.Id" class="form-control"  type="hidden" required >
         
-        <input asp-for="parqueadero.Id" type="hidden" class="form-control" required>
+    </div>
+
+<div class="form-group row">
+        <label asp-for="IdVehiculo" class="col-sm-2">Vehiculo</label>
+        <select asp-for="IdVehiculo" asp-items="Model.vehiculos"></select>
     </div>
 
     <div class="form-group row">
-        <label asp-for="parqueadero.Piso" class="col-sm-2">Piso</label>
-        <input asp-for="parqueadero.Piso" class="form-control" required>
+        <label asp-for="parqueadero.Espacio" class="col-sm-2">Espacio a Ocupar</label>
+        <div class="col-sm-10">
+            <select asp-for="parqueadero.Espacio" asp-items="Html.GetEnumSelectList<Espacio>()"></select>   
+        </div>
+        <span class="text-danger" asp-validation-for="parqueadero.Espacio"></span>
     </div>
 
     <div class="form-group row">
-        <label asp-for="parqueadero.Espacio" class="col-sm-2">Espacio</label>
-        <input asp-for="parqueadero.Espacio" class="form-control" >
+        <label asp-for="parqueadero.Hora_Entrada" class="col-sm-2">Hora de Entrada</label>
+        <input asp-for="parqueadero.Hora_Entrada" class="form-control" >
     </div>
 
     <div class="form-group row">
-        <label asp-for="parqueadero.Estado" class="col-sm-2">Estado</label>
-        <input asp-for="parqueadero.Estado" class="form-control" >
-    </div>
+        <label asp-for="parqueadero.Hora_Salida" class="col-sm-2">Hora de Salida</label>
+        <input asp-for="parqueadero.Hora_Salida" class="form-control" >
     </div>
     <div class="form-group row">
         <button type="submit" class="btn btn-primary">Guardar</button>
